basic page layout nad navigation

--- a/mdblog/templates/about.jinja
+++ b/mdblog/templates/about.jinja
@@ -1,33 +1,7 @@
- 
-<!doctype html>
-<html lang="en">
+{% extends "_main.jinja" %}
 
-<head>
-    <title> Welcome to Markdown blog </title>
-    <link rel="stylesheet" type="text/css" href={{url_for("static", filename="css/main.css")}}>
-</head>
+{% block title %} Admin Page{% endblock %}
 
-<body>
-<header>
-    <h1> Odhrnac </h1>
-</header>
-
-<nav>
-    <ul class=nav>
-      <li> <a href="#">About</a> </li>
-      <li> <a href="#">Articles</a> </li>
-      <li> <a href="#">Admin</a> </li>
-    </ul>
-</nav>
-
-<main>
-    ach jaj
-</main>
-
-<footer>
-    <p>
-        (c) 2021 Odhrnac
-    </p>
-</footer>
-</body>
-</html> 
+{% block main %}
+Ach jaj
+{% endblock %}
